--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.8.1"
+    "@astrojs/react": "^4.3.0",
+    "animejs": "^4.0.2",
+    "aos": "^2.3.4",
+    "astro": "^5.8.1",
+    "bootstrap": "^5.3.6",
+    "jquery": "^3.7.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "sass": "^1.89.1"
   }
 }
