--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "@astrojs/react": "^4.3.0",
-    "animejs": "^4.0.2",
     "aos": "^2.3.4",
     "astro": "^5.8.1",
     "bootstrap": "^5.3.6",
+    "bootstrap-icons": "^1.13.1",
     "jquery": "^3.7.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
